# teste_renner

./: README.md  pyproject.toml
teste_renner/: caixas_em_ondas_minimizando_itens.xlsx  teste_renner.ipynb
